--- a/package.json
+++ b/package.json
@@ -15,5 +15,10 @@
   "bugs": {
     "url": "https://github.com/GeorgeNakhle/OOP-Project/issues"
   },
-  "homepage": "https://github.com/GeorgeNakhle/OOP-Project#readme"
+  "homepage": "https://github.com/GeorgeNakhle/OOP-Project#readme",
+  "dependencies": {
+    "express": "^4.17.1",
+    "handlebars": "^4.7.7",
+    "socket.io": "^4.0.2"
+  }
 }
