--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
+    "setup": "npm i",
+    "start": "nodemon index.js",
+    "norestart": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -20,6 +22,7 @@
   "dependencies": {
     "express": "^4.17.1",
     "handlebars": "^4.7.7",
+    "nodemon": "^2.0.7",
     "socket.io": "^4.0.2"
   }
 }
