--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "express": "^4.17.1",
     "handlebars": "^4.7.7",
+    "mysql": "^2.18.1",
     "nodemon": "^2.0.7",
     "socket.io": "^4.0.2"
   }
