--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "homepage": "https://github.com/GeorgeNakhle/OOP-Project#readme",
   "dependencies": {
+    "dotenv": "^9.0.2",
     "express": "^4.17.1",
     "handlebars": "^4.7.7",
     "mysql": "^2.18.1",
